.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Branch__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Branch_Description__c</fullName>
        <label>Branch Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Mode__c</fullName>
        <label>CI Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VALIDATE</fullName>
                </value>
                <value>
                    <fullName>DEPLOY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Style__c</fullName>
        <label>CI Deployment Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STOP ON FAILURE</fullName>
                </value>
                <value>
                    <fullName>CONTINUE ON FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Last_Commit__c</fullName>
        <label>Last Commit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Last_Updated_On__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flosum__MergedBranches__c</fullName>
        <label>MergedBranches</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Merged_to_Repository__c</fullName>
        <defaultValue>false</defaultValue>
        <description>- If checked, this branch record has been merged to repository
- If NOT checked, this branch is not merged yet.</description>
        <inlineHelpText>- If checked, this branch record has been merged to repository 
- If NOT checked, this branch is not merged yet.</inlineHelpText>
        <label>Merged to Repository?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flosum__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pipeline</label>
        <referenceTo>Flosum__Pipeline__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Repository__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Review_Result__c</fullName>
        <label>Number of issues</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Review_State__c</fullName>
        <label>Review state</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEVER REVIEWED</fullName>
                    <default>true</default>
                    <label>NEVER REVIEWED</label>
                </value>
                <value>
                    <fullName>REVIEWED</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>QUEUED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__isConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isConflict</label>
        <type>Checkbox</type>
    </fields>
    <label>Branch</label>
    <listViews>
        <fullName>Flosum__All</fullName>
        <columns>NAME</columns>
        <columns>Flosum__Branch_Name__c</columns>
        <columns>Flosum__Branch_Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Branch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Flosum__RepositoryIsMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Flosum__Repository__c )</errorConditionFormula>
        <errorMessage>Repository is mandatory on branch.</errorMessage>
    </validationRules>
</CustomObject>